@@ -7,6 +7,7 @@
 	* Added a configuration check and warnings in the backend if the check fails
 	* Added a warning if command line backend is used
 	* Move login JavaScript addition to a separate hook
+	* Updated core patch, fixed some JavaScript errors on the login page
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
